No dependencies via integers or static members
Reported-by: Pedro Ramalhete <pramalhe@gmail.com>
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -91,6 +91,8 @@ at the Jacksonville meeting resulted in a few of items of agreement:
 
 \begin{enumerate}
 \item	Dependency chains should be restricted to pointers.
+	Please note that this excludes not only the troublesome objects
+	of integral type, but also accesses to static members of classes.
 \item	Unmarked code can be handled by having the implementation
 	behave as if markings had been supplied in all locations that
 	could reasonably be marked.
