More on attributes and type qualifiers
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markobjattr.tex
+++ b/markobjattr.tex
@@ -4,3 +4,12 @@ so that it applies to objects, including variables, formal parameters,
 return values, and class members.
 This paper further modifies this proposed attribute so as to also restrict
 it to pointer-like objects.
+
+There have been some objections to attributes on the grounds that
+attributes are not supposed to change program semantics, but no
+consensus as to whether or not this objection is substantive.
+
+The changes to the examples from
+Section~\ref{sec:Representative Use Cases}
+are similar to those shown in
+Section~\ref{sec:Object Modifier}.
