--- a/markobjtypeq.tex
+++ b/markobjtypeq.tex
@@ -2,3 +2,8 @@ This approach, put forward by Torvald Riegel in response to
 Linus Torvalds's spirited criticisms of the current C11 and C++11
 wording, introduces a new \co{value_dep_preserving} type qualifier.
 Objects marked with this type qualifier carry dependencies.
+
+Again, the changes to the examples from
+Section~\ref{sec:Representative Use Cases}
+are similar to those shown in
+Section~\ref{sec:Object Modifier}.
