Fix section references, add template implementation note.
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markobjmod.tex
+++ b/markobjmod.tex
@@ -393,7 +393,7 @@ It need not necessarily interact with the type system.
 
 Figures~\ref{fig:Object Modifier: Simple Case}--\ref{fig:Object Modifier: Handoff to Locking}
 show how object modifiers can be applied to each of the examples
-introduced in Section~\ref{fig:Common Definitions}.
+introduced in Section~\ref{sec:Representative Use Cases}.
 These changes are straightforward markings of local variables, function
 parameters, and return-value types.
 Object modifiers therefore easily support the use cases in the Linux
