Add note saying that proponent-free approaches will not be considered
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -711,6 +711,10 @@ could reasonably be placed.
 This approach permits unmarked programs containing dependency chains
 to be handled in a reasonably natural manner.
 
+Note that many of these proposals consist only of short descriptions.
+Only proposals having proponents willing to fill them out should be
+considered for standardization.
+
 \subsection{Mark Translation Unit}
 \label{sec:Mark Translation Unit}
 
