C/C++ analogy to atomics
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markobjtemplate.tex
+++ b/markobjtemplate.tex
@@ -13,6 +13,10 @@ similar to the atomics template classes.
 This approach would need to be augmented with a non-template solution
 for C, for example, the object-modifier approach from
 Section~\ref{sec:Object Modifier}.
+Implementations that support both C and C++ would presumably relate
+Section~\ref{sec:Object Modifier}'s
+keyword to the templates in this section in a manner similar to
+that used for atomics.
 
 \begin{figure}[tbp]
 { \scriptsize
