Update email address
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -39,7 +39,7 @@
 {\bf Email: } paulmck@linux.vnet.ibm.com, triegel@redhat.com,
 jeff@preshing.com \\
 boehm@acm.org, clark.nelson@intel.com, OGiroux@nvidia.com, \\
-Lawrence@Crowl.org, and jfb@google.com \\ ~ \\
+Lawrence@Crowl.org, and jf@jfbastien.com \\ ~ \\
 {\bf Other contributors: }
 	Alec Teal,
 	David Howells,
