Fix figure cross-reference
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markobjtemplate.tex
+++ b/markobjtemplate.tex
@@ -99,7 +99,7 @@ Note especially that the relational operators are defined in terms of the
 \co{pointer_cmp_lt_dep()}, and
 \co{pointer_cmp_le_dep()}
 functions shown in
-Figure~\ref{@@@},
+Figure~\ref{fig:Dependency-Preserving Comparisons},
 so that as long as the first argument to a relational operator is of type
 \co{class depending_ptr<T>},
 pointers may be safely compared without risk of breaking dependency
